<resources>
    <string name="app_name">Assignment_blackcoffer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_your_availibilty">Select Your Availability</string>
    <string name="select_hyper_local_distance">Select Hyper local Distance</string>
    <string name="hi_community_i_am_open_to_new_connections_quot">Hi community! I am open to new connections" &#x1F60A;</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="save_explore">Save &amp; Explore</string>

</resources>